--- a/_posts/2016-05-22-first.md
+++ b/_posts/2016-05-22-first.md
@@ -1,6 +1,9 @@
 ---
 layout: post
-title: First Post Hi
-excerpt: Test Excerpt and Stuff
+title: Website is Operational!
+excerpt: The Quark Tutoring website is up
 ---
-This is where <i>we link to</i> <a href="http://what-if.xkcd.com/">what-if.xkcd.com/</a> <b>and stuff :DDD</b>
+Hello, World!<br>
+We are excited to announce that we are now operational. Anyone interested in finding a tututor can now do so, and anyone interested in being a tutor can contact us directly.<br>
+Sincerely,<br>
+The Quark Tutoring Team
